cluster/apps/database/stackgres/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackgres
  namespace: database
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: database
    hajimari.io/appName: stackgres
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    app.kubernetes.io/name: stackgres
    app.kubernetes.io/instance: stackgres
spec:
  ingressClassName: traefik
  rules:
    - host: "stackgres.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stackgres-restapi
                port:
                  name: https

  tls:
    - secretName: stackgres-tls
      hosts:
        - "stackgres.${SECRET_DOMAIN}"
